--- a/Puppypals/src/App.css
+++ b/Puppypals/src/App.css
@@ -10,9 +10,10 @@
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
+  text-decoration-color: aquamarine;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #ff64d8aa);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -30,11 +31,13 @@
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
+    background-color: aquamarine;
   }
 }
 
 .card {
   padding: 2em;
+  color: aqua;
 }
 
 .read-the-docs {
